# machine-learning

./: .gitignore  README.md  mypy.ini  pyproject.toml
data/: credit_risk.pkl
src/data_analysis/: calculate_information_gain.py  credit_naive.py  main.py  process_database.py
